---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2024-10-13
  Features:
    - Added wooden board
    - Engineer spawns now with biolab, pipes and offshore pump for easier wood production
    - Support for krastorio custom stack sizes
    - Space research data is now crushed into rocket control unit, processing unit and electronic components
    - Update to resource spawning
  Bugfixes:
    - Unlock unlimited ingredient count for krastorio buildings
    - Locale fixes
    - personal roboports mk3 and mk4 are now in crafting category
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2024-10-10
  Features:
    - Added radioactivity to nuclear items. Only works upon creating a new game.
  Bugfixes:
    - Changed position of steel plate icon
    - Moved krastorio matter-conversion and matter-deconversion recipes to base products item group
    - Removed recipes from barrel recipes that are not supposed to exist (like dark energy in a barrel seems anticlimactic)
    - Fixed barrel tints 
    - Fixed chemistry crafting machine tints
    - Nickel ore is now correctly crushed into crushed nickel ore
    - Some crushing recipes have more than 3 outputs. The krastorio crusher now has 8 output slots.
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2024-10-08
  Features:
    - Update locale for rockets
    - Improved rocket graphics
  Bugfixes:
    - Putting wrong explorer into rocket now results in loosing it
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2024-10-07
  Features:
    - Added locale for en
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2024-10-05
  Features: